--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "tailwindcss": "^3.0.24",
     "typescript": "4.3.5"
   },
+  "resolutions": {
+    "minimist": "^1.2.6",
+    "ansi-regex": "^5.0.1",
+    "follow-redirects": "^1.14.8"
+  },
   "lint-staged": {
     "*.{ts,tsx,css,md}": "prettier --write"
   }
